--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -764,105 +764,108 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,20,90,8
     CONTROL         "No cards",IDC_REBUY_NO_CARDS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,36,45,8
     CONTROL         "Heuristic occlusion-check",IDC_REBUY_HEURISTIC_OCCLUSION_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,52,173,8
-    LTEXT           "Minimum time to next rebuy (sec)",IDC_STATIC_REBUY_MINIMUM_DELAY,4,68,96,8
-    EDITTEXT        IDC_REBUY_EDIT_MINIMUM_DELAY,160,64,29,12,ES_AUTOHSCROLL
-    CONTROL         "",IDC_REBUY_EDIT_MINIMUM_DELAY_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS,189,62,11,14
-    LTEXT           "Rebuy-script",IDC_STATIC_REBUY_SCRIPT,4,100,63,8
-    EDITTEXT        IDC_REBUY_EDIT_SCRIPT,100,100,100,12,ES_AUTOHSCROLL
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 52, 173, 8
+LTEXT           "Minimum time to next rebuy (sec)", IDC_STATIC_REBUY_MINIMUM_DELAY, 4, 68, 96, 8
+EDITTEXT        IDC_REBUY_EDIT_MINIMUM_DELAY, 160, 64, 29, 12, ES_AUTOHSCROLL
+CONTROL         "", IDC_REBUY_EDIT_MINIMUM_DELAY_SPIN, "msctls_updown32", UDS_SETBUDDYINT | UDS_ARROWKEYS, 189, 62, 11, 14
+LTEXT           "Rebuy-script", IDC_STATIC_REBUY_SCRIPT, 4, 100, 63, 8
+EDITTEXT        IDC_REBUY_EDIT_SCRIPT, 100, 100, 100, 12, ES_AUTOHSCROLL
 END
 
 IDD_SAPREFS17 DIALOGEX 0, 0, 204, 154
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Check keyboard layout settings (english - UK, US)",IDC_CONFIGURATION_INPUT_SETTINGS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,8,176,8
-    CONTROL         "Check Font Smoothing Settings",IDC_CONFIGURATION_FONT_SETTINGS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,23,176,10
-    LTEXT           "Correct and working system settings are extremely important",IDC_STATIC,4,45,200,8
-    LTEXT           "  * for the scraper",IDC_STATIC,4,57,96,8
-    LTEXT           "  * for the autoplayer",IDC_STATIC,4,67,96,8
-    LTEXT           "  * if you want to exchange tablemaps with other people",IDC_STATIC,4,77,200,8
-    LTEXT           "Therefore the manual recommends some defaults",IDC_STATIC,4,89,200,8
-    LTEXT           "and we strongly recommend to keep these checks enabled.",IDC_STATIC,4,99,200,8
+CONTROL         "Check keyboard layout settings (english - UK, US)", IDC_CONFIGURATION_INPUT_SETTINGS,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 8, 176, 8
+CONTROL         "Check Font Smoothing Settings", IDC_CONFIGURATION_FONT_SETTINGS,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 23, 176, 10
+LTEXT           "Correct and working system settings are extremely important", IDC_STATIC, 4, 45, 200, 8
+LTEXT           "  * for the scraper", IDC_STATIC, 4, 57, 96, 8
+LTEXT           "  * for the autoplayer", IDC_STATIC, 4, 67, 96, 8
+LTEXT           "  * if you want to exchange tablemaps with other people", IDC_STATIC, 4, 77, 200, 8
+LTEXT           "Therefore the manual recommends some defaults", IDC_STATIC, 4, 89, 200, 8
+LTEXT           "and we strongly recommend to keep these checks enabled.", IDC_STATIC, 4, 99, 200, 8
 END
 
 IDD_SAPREFS18 DIALOGEX 0, 0, 219, 154
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "When I hold cards",IDC_RADIO_SCRAPE_ON_CARDS,"Button",BS_AUTORADIOBUTTON,8,36,76,8
-    CONTROL         "Always",IDC_RADIO_SCRAPE_ALWAYS,"Button",BS_AUTORADIOBUTTON,8,20,67,8
-    CONTROL         "When it is my turn",IDC_RADIO_SCRAPE_ON_MYTURN,"Button",BS_AUTORADIOBUTTON,8,52,85,8
-    GROUPBOX        "Full scrape",IDC_STATIC,4,5,166,63
+CONTROL         "When I hold cards", IDC_RADIO_SCRAPE_ON_CARDS, "Button", BS_AUTORADIOBUTTON, 8, 36, 76, 8
+CONTROL         "Always", IDC_RADIO_SCRAPE_ALWAYS, "Button", BS_AUTORADIOBUTTON, 8, 20, 67, 8
+CONTROL         "When it is my turn", IDC_RADIO_SCRAPE_ON_MYTURN, "Button", BS_AUTORADIOBUTTON, 8, 52, 85, 8
+GROUPBOX        "Full scrape", IDC_STATIC, 4, 5, 166, 63
 END
 
 IDD_SAPREFS19 DIALOGEX 0, 0, 219, 155
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Enable handhistory generator",IDC_HANDHISTORY_GENERATOR_ENABLE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,8,116,8
+CONTROL         "Enable handhistory generator", IDC_HANDHISTORY_GENERATOR_ENABLE,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 8, 116, 8
 END
 
 IDD_SAPREFS20 DIALOGEX 0, 0, 550, 450
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Allin adjustment",IDC_DEBUG_ALLIN_ADJUSTMENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,9,117,10
-    CONTROL         "AST priority ordering",IDC_DEBUG_AST_PRIORITY_ORDERING,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,23,117,10
-    CONTROL         "Auto-connector",IDC_DEBUG_AUTOCONNECTOR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,37,103,10
-    CONTROL         "Autoplayer",IDC_DEBUG_AUTOPLAYER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,51,117,10
-    CONTROL         "Autoplayer trace",IDC_DEBUG_AUTO_TRACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,65,117,10
-    CONTROL         "Blind locking",IDC_DEBUG_BLINDLOCKING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,93,103,10
-    CONTROL         "board$XZY expressions",IDC_DEBUG_BOARD_EXPRESSIONS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,107,117,10
-    CONTROL         "Betsize adjustment",IDC_DEBUG_BETSIZE_ADJUSTMENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,121,117,10
-    CONTROL         "DLL extension",IDC_DEBUG_DLL_EXTENSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,149,103,10
-    CONTROL         "Engine container",IDC_DEBUG_ENGINE_CONTAINER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,177,117,10
-    CONTROL         "Filenames",IDC_DEBUG_FILENAMES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,205,117,10
-    CONTROL         "Formula",IDC_DEBUG_FORMULA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,219,117,10
-    CONTROL         "GUI",IDC_DEBUG_GUI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,247,117,10
-    CONTROL         "Handhistory generator",IDC_DEBUG_HANDHISTORY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,275,103,10
-    CONTROL         "Handreset-detector",IDC_DEBUG_HANDRESET_DETECTOR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,289,117,10
-    CONTROL         "Heartbeat-thread",IDC_DEBUG_HEARTBEAT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,303,103,10
-    CONTROL         "Hopper-messages",IDC_DEBUG_HOPPER_MESSAGES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,4,317,103,10
-    CONTROL         "ICM",IDC_DEBUG_ICM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,9,117,10
-    CONTROL         "Istournament",IDC_DEBUG_ISTOURNAMENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,23,117,10
-    CONTROL         "Lazy scraper",IDC_DEBUG_LAZY_SCRAPER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,51,117,10
-    CONTROL         "Memory symbols",IDC_DEBUG_MEMORY_SYMBOLS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,79,103,10
-    CONTROL         "Memory usage",IDC_DEBUG_MEMORY_USAGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,93,103,10
-    CONTROL         "Occlusion check",IDC_DEBUG_OCCLUSSION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,121,103,10
-    CONTROL         "OpenHoldem.cpp",IDC_DEBUG_OPENHOLDEM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,135,117,10
-    CONTROL         "Parser",IDC_DEBUG_PARSER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,163,117,10
-    CONTROL         "PrWin thread",IDC_DEBUG_PRWIN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,177,103,10
-    CONTROL         "Poker Tracker thread",IDC_DEBUG_POKERTRACKER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,191,103,10
-    CONTROL         "Popup blocker",IDC_DEBUG_POPUP_BLOCKER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,205,103,10
-    CONTROL         "Preferences",IDC_DEBUG_PREFERENCES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,219,117,10
-    CONTROL         "Rebuy management",IDC_DEBUG_REBUY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,247,103,10
-    CONTROL         "Replay frames",IDC_DEBUG_REPLAYFRAMES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,124,261,103,10
-    CONTROL         "Scraper",IDC_DEBUG_SCRAPER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,9,117,10
-    CONTROL         "Scraper directory monitor",IDC_DEBUG_FILESYSTEM_MONITOR,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,23,117,10
-    CONTROL         "Scraper-preprocessor",IDC_DEBUG_SCRAPER_PREPROCESSOR,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,37,117,10
-    CONTROL         "Session counter",IDC_DEBUG_SESSIONCOUNTER,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,244,51,103,10
-    CONTROL         "Stable frames counter",IDC_DEBUG_STABLEFRAMESCOUNTER,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,65,103,10
-    CONTROL         "Symbol engine (OH-script)",IDC_DEBUG_SYMBOLENGINE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,79,103,10
-    CONTROL         "Symbol engine (OpenPPL)",IDC_DEBUG_SYMBOLENGINE_OPENPPL,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,93,103,10
-    CONTROL         "Table-limits (blind values)",IDC_DEBUG_TABLE_LIMITS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,121,117,10
-    CONTROL         "Tablemap loader",IDC_DEBUG_TABLEMAP_LOADER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,135,114,10
-    CONTROL         "Tablepoints",IDC_DEBUG_TABLEPOINTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,149,117,10
-    CONTROL         "Table positioner",IDC_DEBUG_TABLE_POSITIONER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,163,117,10
-    CONTROL         "Tokenizer",IDC_DEBUG_TOKENIZER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,177,117,10
-    CONTROL         "Versus",IDC_DEBUG_VERSUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,205,111,10
-    CONTROL         "All the rest",IDC_DEBUG_ALLTHEREST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,317,117,10
+CONTROL         "Allin adjustment", IDC_DEBUG_ALLIN_ADJUSTMENT, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 9, 117, 10
+CONTROL         "AST priority ordering", IDC_DEBUG_AST_PRIORITY_ORDERING,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 23, 117, 10
+CONTROL         "Auto-connector", IDC_DEBUG_AUTOCONNECTOR, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 37, 103, 10
+CONTROL         "Autoplayer", IDC_DEBUG_AUTOPLAYER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 51, 117, 10
+CONTROL         "Autoplayer trace", IDC_DEBUG_AUTO_TRACE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 65, 117, 10
+CONTROL         "Blind locking", IDC_DEBUG_BLINDLOCKING, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 93, 103, 10
+CONTROL         "board$XZY expressions", IDC_DEBUG_BOARD_EXPRESSIONS,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 107, 117, 10
+CONTROL         "Betsize adjustment", IDC_DEBUG_BETSIZE_ADJUSTMENT, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 121, 117, 10
+CONTROL         "DLL extension", IDC_DEBUG_DLL_EXTENSION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 149, 103, 10
+CONTROL         "Engine container", IDC_DEBUG_ENGINE_CONTAINER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 177, 117, 10
+CONTROL         "Filenames", IDC_DEBUG_FILENAMES, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 205, 117, 10
+CONTROL         "Formula", IDC_DEBUG_FORMULA, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 219, 117, 10
+CONTROL         "GUI", IDC_DEBUG_GUI, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 247, 117, 10
+CONTROL         "Handhistory generator", IDC_DEBUG_HANDHISTORY, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 275, 103, 10
+CONTROL         "Handreset-detector", IDC_DEBUG_HANDRESET_DETECTOR, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 289, 117, 10
+CONTROL         "Heartbeat-thread", IDC_DEBUG_HEARTBEAT, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 303, 103, 10
+CONTROL         "Hopper-messages", IDC_DEBUG_HOPPER_MESSAGES, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 317, 103, 10
+CONTROL         "ICM", IDC_DEBUG_ICM, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 9, 117, 10
+CONTROL         "Istournament", IDC_DEBUG_ISTOURNAMENT, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 23, 117, 10
+CONTROL         "Lazy scraper", IDC_DEBUG_LAZY_SCRAPER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 51, 117, 10
+CONTROL         "Memory symbols", IDC_DEBUG_MEMORY_SYMBOLS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 79, 103, 10
+CONTROL         "Memory usage", IDC_DEBUG_MEMORY_USAGE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 93, 103, 10
+CONTROL         "Occlusion check", IDC_DEBUG_OCCLUSSION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 121, 103, 10
+CONTROL         "OpenHoldem.cpp", IDC_DEBUG_OPENHOLDEM, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 135, 117, 10
+CONTROL         "Parser", IDC_DEBUG_PARSER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 163, 117, 10
+CONTROL         "PrWin thread", IDC_DEBUG_PRWIN, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 177, 103, 10
+CONTROL         "Poker Tracker thread", IDC_DEBUG_POKERTRACKER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 191, 103, 10
+CONTROL         "Popup blocker", IDC_DEBUG_POPUP_BLOCKER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 205, 103, 10
+CONTROL         "Preferences", IDC_DEBUG_PREFERENCES, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 219, 117, 10
+CONTROL         "Rebuy management", IDC_DEBUG_REBUY, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 247, 103, 10
+CONTROL         "Replay frames", IDC_DEBUG_REPLAYFRAMES, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 124, 261, 103, 10
+CONTROL         "Scraper", IDC_DEBUG_SCRAPER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 9, 117, 10
+CONTROL         "Scraper directory monitor", IDC_DEBUG_FILESYSTEM_MONITOR,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 23, 117, 10
+CONTROL         "Scraper-preprocessor", IDC_DEBUG_SCRAPER_PREPROCESSOR,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 37, 117, 10
+CONTROL         "Session counter", IDC_DEBUG_SESSIONCOUNTER, "Button", BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP, 244, 51, 103, 10
+CONTROL         "Stable frames counter", IDC_DEBUG_STABLEFRAMESCOUNTER,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 65, 103, 10
+CONTROL         "Symbol engine (OH-script)", IDC_DEBUG_SYMBOLENGINE,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 79, 103, 10
+CONTROL         "Symbol engine (OpenPPL)", IDC_DEBUG_SYMBOLENGINE_OPENPPL,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 93, 103, 10
+CONTROL         "Table-limits (blind values)", IDC_DEBUG_TABLE_LIMITS,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 121, 117, 10
+CONTROL         "Tablemap loader", IDC_DEBUG_TABLEMAP_LOADER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 135, 114, 10
+CONTROL         "Tablepoints", IDC_DEBUG_TABLEPOINTS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 149, 117, 10
+CONTROL         "Table positioner", IDC_DEBUG_TABLE_POSITIONER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 163, 117, 10
+CONTROL         "Tokenizer", IDC_DEBUG_TOKENIZER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 177, 117, 10
+CONTROL         "Versus", IDC_DEBUG_VERSUS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 205, 111, 10
+CONTROL         "Shared memory", IDC_DEBUG_SHAREDMEM, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 219, 111, 10
+CONTROL         "Singletons", IDC_DEBUG_SINGLETONS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 233, 111, 10
+CONTROL         "Auto-starter", IDC_DEBUG_AUTOSTARTER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 247, 111, 10
+CONTROL         "All the rest",IDC_DEBUG_ALLTHEREST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,317,117,10
 END
 
 IDD_SAPREFS21 DIALOGEX 0, 0, 219, 154
