improved watchdog (init and logging)

--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -817,7 +817,7 @@ CONTROL         "Auto-connector", IDC_DEBUG_AUTOCONNECTOR, "Button", BS_AUTOCHEC
 CONTROL         "Autoplayer", IDC_DEBUG_AUTOPLAYER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 51, 117, 10
 CONTROL         "Autoplayer trace", IDC_DEBUG_AUTO_TRACE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 65, 117, 10
 CONTROL         "Blind locking", IDC_DEBUG_BLINDLOCKING, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 93, 103, 10
-CONTROL         "board$XZY expressions", IDC_DEBUG_BOARD_EXPRESSIONS,
+CONTROL         "board$XYZ expressions", IDC_DEBUG_BOARD_EXPRESSIONS,
 "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 107, 117, 10
 CONTROL         "Betsize adjustment", IDC_DEBUG_BETSIZE_ADJUSTMENT, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 121, 117, 10
 CONTROL         "DLL extension", IDC_DEBUG_DLL_EXTENSION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 149, 103, 10
@@ -865,6 +865,7 @@ CONTROL         "Versus", IDC_DEBUG_VERSUS, "Button", BS_AUTOCHECKBOX | WS_TABST
 CONTROL         "Shared memory", IDC_DEBUG_SHAREDMEM, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 219, 111, 10
 CONTROL         "Singletons", IDC_DEBUG_SINGLETONS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 233, 111, 10
 CONTROL         "Auto-starter", IDC_DEBUG_AUTOSTARTER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 247, 111, 10
+CONTROL         "Watchdog", IDC_DEBUG_WATCHDOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 261, 111, 10
 CONTROL         "All the rest",IDC_DEBUG_ALLTHEREST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,317,117,10
 END
 
