--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -429,6 +429,7 @@ IDD_SAPREFS7 DIALOGEX 0, 0, 219, 155
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+    LTEXT           "Enter values as actual money prizes or as a % of the prize pool:", IDC_STATIC, 4, 7, 206, 8
     LTEXT           "1st place:",IDC_STATIC,4,24,32,8
     EDITTEXT        IDC_ICM_1,45,21,97,14,ES_AUTOHSCROLL
     LTEXT           "2nd place:",IDC_STATIC,4,40,34,8
@@ -437,9 +438,16 @@ BEGIN
     EDITTEXT        IDC_ICM_3,45,53,97,14,ES_AUTOHSCROLL
     LTEXT           "4th place:",IDC_STATIC,4,72,33,8
     EDITTEXT        IDC_ICM_4,45,69,97,14,ES_AUTOHSCROLL
-    LTEXT           "Enter values as actual money prizes or as a % of the prize pool:",IDC_STATIC,4,7,206,8
     LTEXT           "5th place:",IDC_STATIC,4,88,33,8
-    EDITTEXT        IDC_ICM_5,45,85,97,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_ICM_5, 45, 85, 97, 14, ES_AUTOHSCROLL
+    LTEXT           "6th place:", IDC_STATIC, 4, 88, 33, 8
+    EDITTEXT        IDC_ICM_6, 45, 101, 97, 14, ES_AUTOHSCROLL
+    LTEXT           "7th place:", IDC_STATIC, 4, 88, 33, 8
+    EDITTEXT        IDC_ICM_7, 45, 117, 97, 14, ES_AUTOHSCROLL
+    LTEXT           "8th place:", IDC_STATIC, 4, 88, 33, 8
+    EDITTEXT        IDC_ICM_8, 45, 133, 97, 14, ES_AUTOHSCROLL
+    LTEXT           "9th place:", IDC_STATIC, 4, 88, 33, 8
+    EDITTEXT        IDC_ICM_9, 45, 149, 97, 14, ES_AUTOHSCROLL
 END
 
 IDD_HANDLIST DIALOGEX 0, 0, 251, 226
@@ -670,6 +678,14 @@ BEGIN
     CONTROL         "",IDC_MAXFRAMES_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,150,101,11,12
     LTEXT           "If you want to shoot replay-frames for a completely new casino you will need at least a very minimalistic tablemap with correct sizes and title-string to connect to the table.",IDC_STATIC,4,130,186,37
     LTEXT           "Replay-frames are a combination of images (bitmaps) and HTML-files with additional info. If you get asked for replay-frames for trouble-shooting please include both.",IDC_STATIC,4,180,186,37
+END
+
+IDD_SAPREFS9 DIALOGEX 0, 0, 222, 238
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+CONTROL         "Use auto-starter", IDC_USE_AUTO_STARTER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 8, 59, 8
+CONTROL         "Use auto-shutdown", IDC_USE_AUTO_SHUTDOWN,"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 4, 20, 157, 8
 END
 
 IDD_SAPREFS10 DIALOGEX 0, 0, 219, 155
