--- a/OpenReplayShooter/App.config
+++ b/OpenReplayShooter/App.config
@@ -2,17 +2,17 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="WindowsCapture.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="OpenReplayShooter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
         
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
     <userSettings>
-        <WindowsCapture.Properties.Settings>
+        <OpenReplayShooter.Properties.Settings>
             <setting name="OutputFolder" serializeAs="String">
                 <value>C:\TMP</value>
             </setting>
-        </WindowsCapture.Properties.Settings>
+        </OpenReplayShooter.Properties.Settings>
     </userSettings>
 </configuration>
