--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -880,8 +880,8 @@ CONTROL         "Tokenizer", IDC_DEBUG_TOKENIZER, "Button", BS_AUTOCHECKBOX | WS
 CONTROL         "Versus", IDC_DEBUG_VERSUS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 205, 111, 10
 CONTROL         "Shared memory", IDC_DEBUG_SHAREDMEM, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 219, 111, 10
 CONTROL         "Singletons", IDC_DEBUG_SINGLETONS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 233, 111, 10
-CONTROL         "Auto-starter", IDC_DEBUG_AUTOSTARTER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 247, 111, 10
-CONTROL         "Watchdog", IDC_DEBUG_WATCHDOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 261, 111, 10
+//!!!!!CONTROL         "Auto-starter", IDC_DEBUG_AUTOSTARTER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 247, 111, 10
+//!!!!!CONTROL         "Watchdog", IDC_DEBUG_WATCHDOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 261, 111, 10
 CONTROL         "Timers", IDC_DEBUG_TIMERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 275, 111, 10
 CONTROL         "All the rest",IDC_DEBUG_ALLTHEREST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,317,117,10
 END
