--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -282,7 +282,7 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,11,17,21,20
     LTEXT           "OpenHoldem",IDC_STATIC,32,10,208,8,SS_NOPREFIX
-    LTEXT           "Version 11.0.2",IDC_STATIC,32,22,208,8,SS_NOPREFIX
+    LTEXT           "Version 11.1.0",IDC_STATIC,32,22,208,8,SS_NOPREFIX
     LTEXT           "Licensed under GPLv3",IDC_STATIC,32,34,208,8
     LTEXT           "http://www.maxinmontreal.com/forums/index.php",IDC_STATIC,32,54,208,8
     LTEXT           "https://github.com/OpenHoldem",IDC_STATIC,32,66,208,8
@@ -880,8 +880,8 @@ CONTROL         "Tokenizer", IDC_DEBUG_TOKENIZER, "Button", BS_AUTOCHECKBOX | WS
 CONTROL         "Versus", IDC_DEBUG_VERSUS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 205, 111, 10
 CONTROL         "Shared memory", IDC_DEBUG_SHAREDMEM, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 219, 111, 10
 CONTROL         "Singletons", IDC_DEBUG_SINGLETONS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 233, 111, 10
-//!!!!!CONTROL         "Auto-starter", IDC_DEBUG_AUTOSTARTER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 247, 111, 10
-//!!!!!CONTROL         "Watchdog", IDC_DEBUG_WATCHDOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 261, 111, 10
+CONTROL         "Auto-starter", IDC_DEBUG_AUTOSTARTER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 247, 111, 10
+CONTROL         "Watchdog", IDC_DEBUG_WATCHDOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 261, 111, 10
 CONTROL         "Timers", IDC_DEBUG_TIMERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 275, 111, 10
 CONTROL         "All the rest",IDC_DEBUG_ALLTHEREST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,317,117,10
 END
@@ -918,8 +918,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 11,0,2,0
- PRODUCTVERSION 11,0,2,0
+ FILEVERSION 11,1,0,0
+ PRODUCTVERSION 11,1,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -934,9 +934,9 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "FileVersion", "11.0.2.0"
+            VALUE "FileVersion", "11.1.0.0"
             VALUE "LegalCopyright", "Licensed under GPLv3"
-            VALUE "ProductVersion", "11.0.2.0"
+            VALUE "ProductVersion", "11.1.0.0"
         END
     END
     BLOCK "VarFileInfo"
