--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -1233,6 +1233,7 @@ STRINGTABLE
 BEGIN
     IDR_MAINFRAME           "OpenHoldem\n\nformula\nOpenHoldem Files (*.ohf;)\n.ohf;.whf\nOpenHoldem.Document\nformula.Document"
     ID_INDICATOR_STATUS_ACTION "action"
+    ID_INDICATOR_STATUS_DUMMY ""
     ID_INDICATOR_FORMULA_CURPOS "current row"
     ID_INDICATOR_STATUS_HANDRANK "status handrank"
     ID_INDICATOR_STATUS_PRWIN "prwin"
