Clean up statusbar

--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -1237,13 +1237,11 @@ BEGIN
     ID_INDICATOR_FORMULA_CURPOS "current row"
     ID_INDICATOR_STATUS_HANDRANK "status handrank"
     ID_INDICATOR_STATUS_PRWIN "prwin"
-    ID_INDICATOR_STATUS_NIT "f$prwin_number_of_iterations"
 END
 
 STRINGTABLE
 BEGIN
     AFX_IDS_APP_TITLE       "OpenHoldem"
-    AFX_IDS_IDLEMESSAGE     "Ready"
 END
 
 STRINGTABLE
@@ -1274,9 +1272,9 @@ END
 STRINGTABLE
 BEGIN
     ID_MAIN_TOOLBAR_HELP    "Help\nHelp"
-    ID_EDIT_VIEWLOG         "View the log-file of the current OpenHoldem-instance"
-    ID_EDIT_TAGLOG          "Leave a stamp in the log-file for more easy review"
-    ID_EDIT_CLEARLOG        "Empties the log-file  of the current OpenHoldem-instance"
+    ID_EDIT_VIEWLOG         "View the log-file of the current OpenHoldem-instance\nView log file"
+    ID_EDIT_TAGLOG          "Leave a stamp in the log-file for more easy review\nTag log file"
+    ID_EDIT_CLEARLOG        "Empties the log-file  of the current OpenHoldem-instance\nClear log file"
 END
 
 STRINGTABLE
@@ -1344,7 +1342,7 @@ END
 
 STRINGTABLE
 BEGIN
-    ID_EDIT_FORMULA         "Edit the current formula\nEdit"
+    ID_EDIT_FORMULA         "Edit the current formula\nFormula"
     ID_EDIT_PREFERENCES     "Edit preferences\nPreferences"
     ID_BUTTON32776          "New List/UDF"
 END
@@ -1368,34 +1366,32 @@ END
 STRINGTABLE
 BEGIN
     ID_MAIN_TOOLBAR_AUTOPLAYER "Engage autoplayer\nAutoplayer"
-    ID_MAIN_TOOLBAR_FORMULA "Edit the formula\nEdit"
+    ID_MAIN_TOOLBAR_FORMULA "Edit the formula\nFormula"
     ID_DLL_LOAD             "Load the pre-defined DLL "
 END
 
 STRINGTABLE
 BEGIN
     ID_MAIN_TOOLBAR_VALIDATOR "Enable validator\nValidator"
-    ID_HELP_PROBLEMSOLVER   "Detects the most common beginner-mistakes. Give it a try ;-)"
-    ID_MAIN_TOOLBAR_TAGLOGFILE 
-                            "Leave a stamp in the log-file for more easy review"
-    ID_HELP_HELP            "Starts the help-file"
-    ID_HELP_OPEN_PPL        "Starts the OpenPPL help-file"
-    ID_HELP_FORUMS          "Connects to the OpenHoldem forums at www.maxinmontreal.com/forums/"
+    ID_HELP_PROBLEMSOLVER   "Detects the most common beginner-mistakes. Give it a try ;-)\nProblem solver"
+    ID_MAIN_TOOLBAR_TAGLOGFILE "Leave a stamp in the log-file for more easy review\nTag log file"
+    ID_HELP_HELP            "Starts the help-file\nHelp"
+    ID_HELP_OPEN_PPL        "Starts the OpenPPL help-file\nOpenPPL manual"
+    ID_HELP_FORUMS          "Connects to the OpenHoldem forums at www.maxinmontreal.com/forums/\nOpenHoldem Forum"
 END
 
 STRINGTABLE
 BEGIN
     ID_MAIN_TOOLBAR_SCRAPER_OUTPUT "Scraper output\nScraper output"
-    ID_VIEW_SCRAPEROUTPUT   "View images that get captured by the scraper-engine"
-    ID_DLL_LOADSPECIFICFILE "Prompt the user for a DLL to load"
+    ID_VIEW_SCRAPEROUTPUT   "View images that get captured by the scraper-engine\nScraper output"
+    ID_DLL_LOADSPECIFICFILE "Prompt the user for a DLL to load\nLoad DLL"
 END
 
 STRINGTABLE
 BEGIN
-    ID_MAIN_TOOLBAR_MANUALMODE "Start ManualMode"
-    ID_MAIN_TOOLBAR_SHOOTFRAME "Shoot frame\nShoot frame"
-    ID_VIEW_SHOOTREPLAYFRAME 
-                            "Shoot an image of the current table-view for later inspection with OHReplay"
+    ID_MAIN_TOOLBAR_MANUALMODE "Start ManualMode\nManualMode"
+    ID_MAIN_TOOLBAR_SHOOTFRAME "Shoot an image of the current table-view for later inspection with OHReplay\nShoot replay frame"
+    ID_VIEW_SHOOTREPLAYFRAME "Shoot an image of the current table-view for later inspection with OHReplay\nShoot replay frame"                            
 END
 
 #endif    // English (United States) resources
