--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -881,8 +881,9 @@ CONTROL         "Auto-starter", IDC_DEBUG_AUTOSTARTER, "Button", BS_AUTOCHECKBOX
 CONTROL         "Watchdog", IDC_DEBUG_WATCHDOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 261, 111, 10
 CONTROL         "Timers", IDC_DEBUG_TIMERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 275, 111, 10
 CONTROL         "NutFullhouse", IDC_DEBUG_NUTFULLHOUSE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 289, 111, 10
-CONTROL         "Multiplexer", IDC_DEBUG_MULTIPLEXER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 289, 111, 10
+CONTROL         "Multiplexer", IDC_DEBUG_MULTIPLEXER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 303, 111, 10
 CONTROL         "All the rest",IDC_DEBUG_ALLTHEREST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,317,117,10
+PUSHBUTTON      "Toggle all", IDC_TOGGLE_ALL_DEBUG, 244, 250, 50, 14
 END
 
 IDD_SAPREFS21 DIALOGEX 0, 0, 219, 154
