--- a/OpenHoldem/OpenHoldem.vcxproj.filters
+++ b/OpenHoldem/OpenHoldem.vcxproj.filters
@@ -795,6 +795,9 @@
     <ClCompile Include="CSymbolengineConstants.cpp">
       <Filter>Source Files\Symbols\Symbol_Engines</Filter>
     </ClCompile>
+    <ClCompile Include="CParseTreeTerminalNodeEndOfFunction.cpp">
+      <Filter>Source Files\Parser</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Validator_Rules\consistency_checks_action_symbols_inline.cpp_">
@@ -1686,6 +1689,9 @@
     </ClInclude>
     <ClInclude Include="CSymbolengineConstants.h">
       <Filter>Header Files\Symbols\Symbol_Engines</Filter>
+    </ClInclude>
+    <ClInclude Include="CParseTreeTerminalNodeEndOfFunction.h">
+      <Filter>Header Files\Parser</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
