Working at parser error-messages

--- a/OpenHoldem/OpenHoldem.rc
+++ b/OpenHoldem/OpenHoldem.rc
@@ -882,6 +882,7 @@ CONTROL         "Watchdog", IDC_DEBUG_WATCHDOG, "Button", BS_AUTOCHECKBOX | WS_T
 CONTROL         "Timers", IDC_DEBUG_TIMERS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 275, 111, 10
 CONTROL         "NutFullhouse", IDC_DEBUG_NUTFULLHOUSE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 289, 111, 10
 CONTROL         "Multiplexer", IDC_DEBUG_MULTIPLEXER, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 303, 111, 10
+CONTROL         "Symbol verification", IDC_DEBUG_SYMBOL_VERIFICATION, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 244, 303, 111, 10
 CONTROL         "All the rest",IDC_DEBUG_ALLTHEREST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,244,317,117,10
 PUSHBUTTON      "Toggle all", IDC_TOGGLE_ALL_DEBUG, 244, 250, 50, 14
 END
